--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image 
+name: Build and push Docker image
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Docker image
-        run: docker build . --tag Dockerfile:latest
+        run: docker build . --tag prachive/my-nginx-image:latest
 
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -22,4 +22,4 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Push Docker image to Docker Hub
-        run: docker push prachive/Dockerfile:latest
+        run: docker push prachive/my-nginx-image:latest
